# serializer version: 1
# name: TestCFCompliance.test_subset_open_cfcompliant
  'cmems_mod_nws_bgc-pft_my_7km-3D-pico_P1M-m'
# ---
# name: TestCFCompliance.test_subset_open_cfcompliant.1
  168
# ---
# name: TestCFCompliance.test_subset_open_cfcompliant.2
  169
# ---
# name: TestCFCompliance.test_subset_open_cfcompliant.3
  list([
    '§2.3 Naming Conventions',
    list([
      'global attribute netcdf-version-id should begin with a letter and be composed of letters, digits, and underscores',
    ]),
  ])
# ---
# name: TestCFCompliance.test_subset_with_warns_cfcompliant
  'cmems_obs-sst_med_phy-sst_nrt_diurnal-oi-0.0625deg_PT1H-m'
# ---
# name: TestCFCompliance.test_subset_with_warns_cfcompliant.1
  182
# ---
# name: TestCFCompliance.test_subset_with_warns_cfcompliant.2
  183
# ---
# name: TestCFCompliance.test_subset_with_warns_cfcompliant.3
  list([
    '§2.6 Attributes',
    list([
      '§2.6.1 Conventions global attribute does not contain "CF-1.6"',
    ]),
  ])
# ---
# name: TestCFCompliance.test_valid_ranges_correct_cfcompliant
  'cmems_obs-sst_glo_phy_l3s_pir_P1D-m'
# ---
# name: TestCFCompliance.test_valid_ranges_correct_cfcompliant.1
  215
# ---
# name: TestCFCompliance.test_valid_ranges_correct_cfcompliant.2
  217
# ---
# name: TestCFCompliance.test_valid_ranges_correct_cfcompliant.3
  list([
    '§7.3 Cell Methods',
    list([
      "sea_surface_temperature's cell_methods name component lat does not match a dimension, area or auxiliary coordinate",
      "sea_surface_temperature's cell_methods name component lon does not match a dimension, area or auxiliary coordinate",
    ]),
  ])
# ---
